--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -1,1 +1,15 @@
-<p>jobs works!</p>
+<div class="job-grid">
+  @if (jobs.length == 0) {
+    <h1>No hay empleos diponibles</h1>
+  }@else {
+    @for (job of jobs; track $index) {
+      <div class="job-card">
+        <h3>{{ job.title }}</h3>
+        <p>{{ job.description }}</p>
+        <p>{{ job.location }}</p>
+        <p>Salario: ${{ job.salary }}</p>
+        <button>Apply Now</button>
+      </div>
+      }
+  }
+</div>
