--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -16,7 +16,8 @@
     <nav class="navbar">
       <div class="navbar-logo">
         <!-- Logo aquí -->
-        <img src="path-to-logo/logo.png" alt="Logo">
+        <!-- <img src="" alt="Logo"> -->
+         <h2>Dashboard de empleos</h2>
       </div>
       <div class="navbar-actions">
         <!-- Botón a la derecha -->
