--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+::view-transition-old(root){
+    animation: exit 1s ease 0s 1 normal forwards;
+}
+
+::view-transition-new(root){
+    animation: enter 1.2s ease 0s 1 normal forwards;
+}
 
 * {
     margin: 0;
@@ -8,4 +15,30 @@
 
 body {
     font-family: "Onest", sans-serif;
+}
+
+/* Añade estos estilos a tu archivo CSS global (styles.css o similar) */
+
+@keyframes enter {
+    from { 
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes exit {
+    from {
+        opacity: 1;
+        transform: scale(1);
+    }
+
+    to{
+        opacity: 0;
+        transform: scale(0.6);
+    }
 }
